fixes vertical spacing on shows page

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -362,7 +362,8 @@
 .jazz.page-shows .show-listing .band,
 .jazz.page-shows .show-listing .venue,
 .jazz.page-shows .show-listing p.date {
-  float: left; }
+  float: left;
+  margin-bottom: 0px; }
 .jazz.page-shows .show-listing .band {
   margin-right: 3px; }
 .jazz.page-shows .show-listing .venue {
@@ -370,6 +371,11 @@
 .jazz.page-shows .show-listing p.date {
   margin-bottom: 0px;
   margin-top: 3px; }
+.jazz.page-shows .show-listing h3 {
+  margin-bottom: 3px; }
+.jazz.page-shows .show-listing ul li {
+  padding-bottom: 0px;
+  margin-bottom: 5px; }
 
 .jazz.page-donate .masthead-top {
   background-image: url(/images/titles/donate_title.png); }
