--- a/public/stylesheets/pages/shows.css
+++ b/public/stylesheets/pages/shows.css
@@ -3,7 +3,8 @@
 .jazz.page-shows .show-listing .band,
 .jazz.page-shows .show-listing .venue,
 .jazz.page-shows .show-listing p.date {
-  float: left; }
+  float: left;
+  margin-bottom: 0px; }
 .jazz.page-shows .show-listing .band {
   margin-right: 3px; }
 .jazz.page-shows .show-listing .venue {
@@ -11,3 +12,8 @@
 .jazz.page-shows .show-listing p.date {
   margin-bottom: 0px;
   margin-top: 3px; }
+.jazz.page-shows .show-listing h3 {
+  margin-bottom: 3px; }
+.jazz.page-shows .show-listing ul li {
+  padding-bottom: 0px;
+  margin-bottom: 5px; }
